# SQLQuest

./: .gitignore  README.md  prompt.md
backend/: .gitignore  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6f9f9cf6ba82_add_user_badges.py  fb06b1abf090_initial_schema.py
backend/app/api/: auth.py  datasets.py  leaderboard.py  levels.py  submissions.py  tutor.py
backend/app/core/: config.py  deps.py  duckdb_session.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  attempt.py  badge.py  dataset.py  level.py  user.py
backend/app/schemas/: auth.py  dataset.py  level.py  submission.py
backend/app/services/: analysis.py  badges.py  gemini_client.py  grading.py  ingestion.py  level_generator.py  optimizer.py  query_runner.py  schema_profiler.py  sql_rules.py  sql_safety.py  tutor.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/badges/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/datasets/[id]/progress/: page.tsx
frontend/app/datasets/[id]/world/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: BadgeToast.tsx  DataPreview.tsx  Hud.tsx  NavDrawer.tsx  SqlEditor.tsx  TutorDrawer.tsx
frontend/components/game/: GameCanvas.tsx  constants.ts
frontend/components/game/scenes/: WorldScene.ts
frontend/lib/: api.ts
frontend/public/game/dude/: CREDITS.md
images/: README.md
(+3 files in other folders)
