[project]
name = "sqlquest-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt==4.0.1",
    "duckdb>=1.5.4",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "sqlglot>=30.12.0",
    "uvicorn[standard]>=0.49.0",
]
